@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-21T16:15:15Z",
-  "count_outdated" : 270,
-  "uniques_outdated" : 136,
-  "count" : 320,
-  "uniques" : 170,
+  "timestamp" : "2022-05-22T00:59:03Z",
+  "count_outdated" : 281,
+  "uniques_outdated" : 144,
+  "count" : 328,
+  "uniques" : 175,
   "clones" : [
-    {
-      "timestamp": "2022-05-07T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 11 ],
-      "uniques": 3,
-      "uniques_minmax": [ 1, 8 ]
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 9,
