@@ -1,12 +1,7 @@
 {
-  "count": 50,
-  "uniques": 16,
+  "count": 47,
+  "uniques": 14,
   "clones": [
-    {
-      "timestamp": "2022-05-07T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 9,
